Update on Overleaf.

--- a/acronyms.sty
+++ b/acronyms.sty
@@ -24,8 +24,14 @@
 \DeclareAcronym{IR}{short=IR, long = information retrieval}
 \DeclareAcronym{KISS}{short=KISS, long = keep it short and simple}
 \DeclareAcronym{LiSSA}{short=LiSSA, long = Linking Software System Artifacts, cite=fuchss2025LiSSAGeneric}
-\DeclareAcronym{LiSSAf}{short=LiSSA-framework, long = Linking Software System Artifacts framework, cite=fuchss2025LiSSAGeneric}
 \DeclareAcronym{Req2Req}{short=Req2Req, long = requiremens-to-requirements}
+\DeclareAcronym{API}{short=API, long = application programming interface}
+\DeclareAcronym{codellama}{short=codellama, long = \texttt{codellama:13b}}
+\DeclareAcronym{llama}{short=llama, long = \texttt{llama3.1:8b}}
+\DeclareAcronym{gpt-4o}{short=GPT-4o, long = \texttt{GPT-4o-date}, cite=openai2024GPT4oSystem}
+\DeclareAcronym{gpt-4o-mini}{short=GPT-4o-mini, long = \texttt{GPT-4o-mini-date}, cite=openai2024GPT4oSystem}
+\DeclareAcronym{gpt-5-mini}{short=GPT-5-mini, long = \texttt{GPT-5-mini-date}}
+\DeclareAcronym{text-embedding}{short=text-embedding-3,long=\texttt{text-embedding-3-large}}
 
 
 \newcommand{\ToT}[0]{\ac{ToT}\xspace}
@@ -41,11 +47,19 @@
 \newcommand{\KISS}[0]{\ac{KISS}\xspace}
 \newcommand{\LiSSA}[0]{\ac{LiSSA}\xspace}
 \newcommand{\LISSA}[0]{\LiSSA}
-\newcommand{\LiSSAf}[0]{\ac{LiSSAf}\xspace}
+\newcommand{\LiSSAf}[0]{\ac{LiSSA} framework\xspace}
 \newcommand{\LISSAf}[0]{\LISSAf}
 \newcommand{\LiSSAF}[0]{\LISSAf}
 \newcommand{\LISSAF}[0]{\LISSAf}
 \newcommand{\RtR}[0]{\ac{Req2Req}\xspace}
+\newcommand{\API}[0]{\ac{API}\xspace}
+\newcommand{\codellama}[0]{\ac{codellama}\xspace}
+\newcommand{\llama}[0]{\ac{llama}\xspace}
+\newcommand{\gpt}[0]{\ac{gpt-4o}\xspace}
+\newcommand{\gptmini}[0]{\ac{gpt-4o-mini}\xspace}
+\newcommand{\gptf}[0]{\ac{gpt-5-mini}\xspace}
+\newcommand{\OAI}[0]{OpenAI}
+
 
 
 \newcommand{\tripplequote}[0]{\textquotesingle{}\textquotesingle{}\textquotesingle{}}
