add weighted average to evaluation results remove CCHIT dataset from evaluation

--- a/sections/approach.tex
+++ b/sections/approach.tex
@@ -123,3 +123,8 @@ Varying testing data is also plausible.
 Including artifacts and their links from different projects into a singular data set might have the potential to yield more general but less optimized prompts. 
 The exact scope of the evaluation remains to be seen.
 It will be dynamically adjusted when actual implementations exist and are ready to test.
+
+
+\subsection{Datasets}
+\label{approach:sec:datasets}
+The datasets used for evaluation will be the same as in \citewithauthor{hey2025RequirementsTraceability}.
