--- a/tables/FeedbackOptimizer.tex
+++ b/tables/FeedbackOptimizer.tex
@@ -8,12 +8,6 @@
     \cmidrule(lr){ 12-14 }
     &                            & GPT-4o        & GPT-4o-mini        & Llama 3.1        & GPT-4o        & GPT-4o-mini        & Llama 3.1        & GPT-4o        & GPT-4o-mini        & Llama 3.1        & GPT-4o        & GPT-4o-mini        & Llama 3.1           \\
     \midrule
-    \multirow{ 3 }{*}{\rotatebox{90}{CCHIT}}
-    & P.    & 0.23    & 0.209    & 0.206    & 0.308    & 0.103    & 0.198    & \textbf{ 0.512 }    & 0.235    & 0.321    & 0.385    & 0.244    & 0.198 \\
-    & R.    & 0.155    & 0.155    & \textbf{ 0.157 }    & 0.153    & 0.014    & \textbf{ 0.157 }    & 0.037    & 0.14    & 0.101    & 0.089    & 0.111    & \textbf{ 0.157 } \\
-    & F\textsubscript{1}    & 0.185    & 0.178    & 0.178    & \textbf{ 0.205 }    & 0.024    & 0.175    & 0.07    & 0.175    & 0.153    & 0.144    & 0.152    & 0.175 \\
-    \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
-
     \multirow{ 3 }{*}{\rotatebox{90}{CM1-NASA}}
     & P.    & 0.349    & 0.337    & 0.33    & 0.341    & \textbf{ 0.382 }    & 0.33    & 0.333    & 0.367    & 0.364    & 0.345    & 0.372    & 0.33 \\
     & R.    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & 0.444    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & \textbf{ 0.644 } \\
@@ -45,9 +39,15 @@
     \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
 
     \multirow{ 3 }{*}{\rotatebox{90}{Avg.}}
-    & P.    & 0.355    & 0.345    & 0.347    & 0.401    & 0.356    & 0.367    & \textbf{ 0.466 }    & 0.397    & 0.462    & 0.399    & 0.374    & 0.411 \\
-    & R.    & \textbf{ 0.501 }    & \textbf{ 0.501 }    & 0.496    & 0.5    & 0.473    & 0.364    & 0.48    & 0.48    & 0.319    & 0.481    & 0.491    & 0.402 \\
-    & F\textsubscript{1}    & 0.405    & 0.399    & 0.397    & \textbf{ 0.421 }    & 0.393    & 0.331    & 0.409    & 0.409    & 0.286    & 0.403    & 0.41    & 0.361 \\
+    & P.    & 0.38    & 0.372    & 0.375    & 0.419    & 0.407    & 0.4    & 0.457    & 0.43    & \textbf{ 0.49 }    & 0.401    & 0.401    & 0.454 \\
+    & R.    & \textbf{ 0.57 }    & \textbf{ 0.57 }    & 0.564    & 0.569    & 0.565    & 0.405    & 0.569    & 0.547    & 0.363    & 0.56    & 0.568    & 0.451 \\
+    & F\textsubscript{1}    & 0.449    & 0.443    & 0.441    & 0.465    & 0.467    & 0.362    & \textbf{ 0.477 }    & 0.456    & 0.312    & 0.454    & 0.462    & 0.398 \\
+    \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
+
+    \multirow{ 3 }{*}{\rotatebox{90}{Weighted Avg.}}
+    & P.    & 0.397    & 0.388    & 0.387    & 0.412    & 0.426    & 0.396    & 0.435    & 0.41    & \textbf{ 0.651 }    & 0.409    & 0.409    & 0.402 \\
+    & R.    & \textbf{ 0.637 }    & \textbf{ 0.637 }    & 0.627    & 0.635    & 0.629    & 0.396    & 0.635    & 0.608    & 0.298    & 0.632    & 0.633    & 0.429 \\
+    & F\textsubscript{1}    & 0.484    & 0.477    & 0.472    & 0.489    & \textbf{ 0.503 }    & 0.35    & 0.5    & 0.476    & 0.245    & 0.489    & 0.491    & 0.382 \\
     \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
 
 \end{tabularx}
