--- a/tables/SimpleAndRepeatedOptimization.tex
+++ b/tables/SimpleAndRepeatedOptimization.tex
@@ -7,12 +7,6 @@
     \cmidrule(lr){ 9-11 }
     &                            & GPT-4o        & GPT-4o-mini        & Llama 3.1        & GPT-4o        & GPT-4o-mini        & Llama 3.1        & GPT-4o        & GPT-4o-mini        & Llama 3.1           \\
     \midrule
-    \multirow{ 3 }{*}{\rotatebox{90}{CCHIT}}
-    & P.    & 0.23    & 0.209    & 0.206    & 0.276    & 0.222    & 0.0    & 0.259    & \textbf{ 0.46 }    & 0.199 \\
-    & R.    & 0.155    & 0.155    & \textbf{ 0.157 }    & 0.155    & \textbf{ 0.157 }    & 0.0    & 0.155    & 0.099    & \textbf{ 0.157 } \\
-    & F\textsubscript{1}    & 0.185    & 0.178    & 0.178    & \textbf{ 0.198 }    & 0.184    & 0.0    & 0.194    & 0.163    & 0.175 \\
-    \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
-
     \multirow{ 3 }{*}{\rotatebox{90}{CM1-NASA}}
     & P.    & 0.349    & 0.337    & 0.33    & 0.341    & 0.333    & \textbf{ 1.0 }    & 0.354    & 0.622    & 0.33 \\
     & R.    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & 0.0    & \textbf{ 0.644 }    & 0.511    & \textbf{ 0.644 } \\
@@ -44,9 +38,15 @@
     \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
 
     \multirow{ 3 }{*}{\rotatebox{90}{Avg.}}
-    & P.    & 0.355    & 0.345    & 0.347    & 0.413    & 0.351    & \textbf{ 0.833 }    & 0.406    & 0.511    & 0.33 \\
-    & R.    & \textbf{ 0.501 }    & \textbf{ 0.501 }    & 0.496    & 0.49    & 0.499    & 0.0    & 0.493    & 0.388    & \textbf{ 0.501 } \\
-    & F\textsubscript{1}    & 0.405    & 0.399    & 0.397    & 0.426    & 0.401    & 0.0    & \textbf{ 0.427 }    & 0.405    & 0.388 \\
+    & P.    & 0.38    & 0.372    & 0.375    & 0.44    & 0.377    & \textbf{ 1.0 }    & 0.436    & 0.521    & 0.356 \\
+    & R.    & \textbf{ 0.57 }    & \textbf{ 0.57 }    & 0.564    & 0.557    & 0.568    & 0.0    & 0.56    & 0.446    & \textbf{ 0.57 } \\
+    & F\textsubscript{1}    & 0.449    & 0.443    & 0.441    & 0.472    & 0.445    & 0.0    & \textbf{ 0.474 }    & 0.453    & 0.431 \\
+    \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
+
+    \multirow{ 3 }{*}{\rotatebox{90}{Weighted Avg.}}
+    & P.    & 0.397    & 0.388    & 0.387    & 0.434    & 0.39    & \textbf{ 1.0 }    & 0.434    & 0.527    & 0.38 \\
+    & R.    & \textbf{ 0.637 }    & \textbf{ 0.637 }    & 0.627    & 0.623    & 0.633    & 0.0    & 0.627    & 0.529    & \textbf{ 0.637 } \\
+    & F\textsubscript{1}    & 0.484    & 0.477    & 0.472    & 0.501    & 0.476    & 0.0    & 0.503    & \textbf{ 0.514 }    & 0.471 \\
     \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
 
 \end{tabularx}
