add latexmk file to build thesis locally

--- a/thesis.bib
+++ b/thesis.bib
@@ -179,20 +179,6 @@
   langid = {ngerman}
 }
 
-@online{GitHubArDoCoBenchmark,
-  title = {{{GitHub}} - {{ArDoCo}}/{{Benchmark}} at Ecsa22-Msr4sa},
-  url = {https://github.com/ArDoCo/Benchmark/tree/ecsa22-msr4sa},
-  urldate = {2025-05-20}
-}
-
-@online{GitHubArDoCoBenchmarka,
-  title = {{{GitHub}} - {{ArDoCo}}/{{Benchmark}} at Ecsa22-Msr4sa},
-  url = {https://github.com/ArDoCo/Benchmark},
-  urldate = {2025-05-20},
-  langid = {english},
-  organization = {GitHub}
-}
-
 @article{hayes2006AdvancingCandidate,
   title = {Advancing Candidate Link Generation for Requirements Tracing: The Study of Methods},
   shorttitle = {Advancing Candidate Link Generation for Requirements Tracing},
@@ -207,6 +193,21 @@
   url = {https://ieeexplore.ieee.org/abstract/document/1583599},
   urldate = {2025-05-26},
   keywords = {Computer aided software engineering,Computer Society,dynamic link generation,Feedback,Independent Validation and Verification (IV&V),information retrieval,Information retrieval,Large scale integration,LSI,precision.,Prototypes,recall,Requirements tracing,Risk analysis,Spine,System testing,TF-IDF,Verification and Validation (V&V)}
+}
+
+@inproceedings{hey2020NoRBERTTransfer,
+  title = {{{NoRBERT}}: {{Transfer Learning}} for {{Requirements Classification}}},
+  shorttitle = {{{NoRBERT}}},
+  booktitle = {2020 {{IEEE}} 28th {{International Requirements Engineering Conference}} ({{RE}})},
+  author = {Hey, Tobias and Keim, Jan and Koziolek, Anne and Tichy, Walter F.},
+  date = {2020-08},
+  pages = {169--179},
+  issn = {2332-6441},
+  doi = {10.1109/RE48521.2020.00028},
+  url = {https://ieeexplore.ieee.org/document/9218141},
+  urldate = {2025-08-20},
+  eventtitle = {2020 {{IEEE}} 28th {{International Requirements Engineering Conference}} ({{RE}})},
+  keywords = {BERT,Bit error rate,Language Model,Machine learning,Machine Learning,Natural language processing,Requirements Classification,Requirements engineering,Requirements Engineering,Task analysis,Training,Transfer Learning}
 }
 
 @inproceedings{hey2021ImprovingTraceability,
@@ -256,12 +257,6 @@
   url = {https://github.com/dave1010/tree-of-thought-prompting},
   urldate = {2025-06-02},
   version = {0.1}
-}
-
-@online{ImprovingTraceability,
-  title = {Improving {{Traceability Link Recovery Using Fine-grained Requirements-to-Code Relations}} | {{IEEE Conference Publication}} | {{IEEE Xplore}}},
-  url = {https://ieeexplore.ieee.org/abstract/document/9609109},
-  urldate = {2025-06-14}
 }
 
 @inproceedings{keim2021TraceLink,
@@ -397,20 +392,6 @@
 }
 
 @online{long2023LargeLanguage,
-  title = {Large {{Language Model Guided Tree-of-Thought}}},
-  author = {Long, Jieyi},
-  date = {2023-05-15},
-  eprint = {2305.08291},
-  eprinttype = {arXiv},
-  eprintclass = {cs},
-  doi = {10.48550/arXiv.2305.08291},
-  url = {http://arxiv.org/abs/2305.08291},
-  urldate = {2025-06-02},
-  pubstate = {prepublished},
-  keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language,Computer Science - Computer Vision and Pattern Recognition,Computer Science - Machine Learning,Computer Science - Neural and Evolutionary Computing}
-}
-
-@online{long2023LargeLanguagea,
   title = {Large {{Language Model Guided Tree-of-Thought}}},
   author = {Long, Jieyi},
   date = {2023-05-15},
@@ -683,34 +664,6 @@
   isbn = {978-3-031-88531-0},
   langid = {english},
   keywords = {large language models,LLM,natural language processing,NLP,prompt engineering,requirements engineering}
-}
-
-@inproceedings{zadenoori2025AutomaticPrompta,
-  title = {Automatic {{Prompt Engineering}}: {{The~Case}} of~{{Requirements Classification}}},
-  shorttitle = {Automatic {{Prompt Engineering}}},
-  booktitle = {Requirements {{Engineering}}: {{Foundation}} for {{Software Quality}}},
-  author = {Zadenoori, Mohammad Amin and Zhao, Liping and Alhoshan, Waad and Ferrari, Alessio},
-  editor = {Hess, Anne and Susi, Angelo},
-  date = {2025},
-  pages = {217--225},
-  publisher = {Springer Nature Switzerland},
-  location = {Cham},
-  doi = {10.1007/978-3-031-88531-0_15},
-  isbn = {978-3-031-88531-0},
-  langid = {english},
-  keywords = {large language models,LLM,natural language processing,NLP,prompt engineering,requirements engineering}
-}
-
-@inproceedings{zaidmanNoTitleFound2018,
-  title = {[{{No}} Title Found]},
-  booktitle = {Proceedings of the 15th {{International Conference}} on {{Mining Software Repositories}}},
-  author = {Zaidman, Andy and Kamei, Yasutaka and Hill, Emily},
-  date = {2018-05-28},
-  publisher = {ACM},
-  location = {Gothenburg Sweden},
-  eventtitle = {{{ICSE}} '18: 40th {{International Conference}} on {{Software Engineering}}},
-  isbn = {978-1-4503-5716-6},
-  langid = {english}
 }
 
 @online{zeng2022SocraticModels,
