Update on Overleaf.

--- a/acronyms.sty
+++ b/acronyms.sty
@@ -28,11 +28,12 @@
 \DeclareAcronym{API}{short=API, long = application programming interface}
 \DeclareAcronym{codellama}{short=codellama, long = \texttt{codellama:13b}}
 \DeclareAcronym{llama}{short=llama, long = \texttt{llama3.1:8b}}
-\DeclareAcronym{gpt-4o}{short=GPT-4o, long = \texttt{GPT-4o-date}, cite=openai2024GPT4oSystem}
-\DeclareAcronym{gpt-4o-mini}{short=GPT-4o-mini, long = \texttt{GPT-4o-mini-date}, cite=openai2024GPT4oSystem}
+\DeclareAcronym{gpt-4o}{short=GPT-4o, long = \texttt{GPT-4o--2024-08-06}, cite=openai2024GPT4oSystem}
+\DeclareAcronym{gpt-4o-mini}{short=GPT-4o-mini, long = \texttt{GPT-4o-mini-2024-07-18}, cite=openai2024GPT4oSystem}
 \DeclareAcronym{gpt-5-mini}{short=GPT-5-mini, long = \texttt{GPT-5-mini-date}}
 \DeclareAcronym{text-embedding}{short=text-embedding-3,long=\texttt{text-embedding-3-large}}
-
+\DeclareAcronym{gpt-copilot}{long=\texttt{GPT-4.1 Copilot}}
+\DeclareAcronym{AI}{short=AI, long=Artifical Intelligence}
 
 \newcommand{\ToT}[0]{\ac{ToT}\xspace}
 \newcommand{\CoT}[0]{\ac{CoT}\xspace}
@@ -58,8 +59,8 @@
 \newcommand{\gpt}[0]{\ac{gpt-4o}\xspace}
 \newcommand{\gptmini}[0]{\ac{gpt-4o-mini}\xspace}
 \newcommand{\gptf}[0]{\ac{gpt-5-mini}\xspace}
-\newcommand{\OAI}[0]{OpenAI}
-
+\newcommand{\OAI}[0]{OpenAI\xspace}
+\newcommand{\AI}[0]{\ac{AI}\xspace}
 
 
 \newcommand{\tripplequote}[0]{\textquotesingle{}\textquotesingle{}\textquotesingle{}}
