--- a/preamble.sty
+++ b/preamble.sty
@@ -26,6 +26,7 @@
 \newcommand{\citewithauthor}[1]{\citeauthor{#1}~\cite{#1}\xspace}
 \newcommand{\directQuote}[3][]{\guillemotleft#2\guillemotright~\cite[#1]{#3}\xspace}
 \newcommand{\citeiterative}[0]{\cite{pryzant2023AutomaticPrompt, zadenoori2025AutomaticPrompt, zhou2023LargeLanguage, madaan2023SelfRefineIterative}\xspace}
+\newcommand{\Quote}[2][]{\guillemotleft#2\guillemotright~[#1]\xspace}
 \newcommand{\eq}[0]{=}
 \newcommand{\algorithmautorefname}{Algorithm}
 
